# SDL2-Games

./: CMakeLists.txt  CMakePresets.json  README.md  game-of-life  main.cpp
src/: game-of-life-main.cpp  game-of-life.cpp  game_util.hpp  gol_util.hpp  sdl2_util.cpp  sdl2_util.hpp  snake-main.cpp  snake.cpp  snake_util.cpp  snake_util.hpp
src/sdl2_util/: video.cpp  video.hpp
